--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,8 @@
   <link
     href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
     rel="stylesheet">
-
+  <!--aqui-->
+  <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
   <!-- Custom styles for this template-->
   <link href="./assets/css/sb-admin-2.min.css" rel="stylesheet">
 
@@ -25,7 +26,7 @@
 <body id="page-top">
 
 
-<<app-root></app-root>
+<app-root></app-root>
 
 </body>
 
